# lwmqtt

./: .gitignore  .travis.yml  Benoit.Notes.txt  CMakeLists.txt  Makefile  README.md  client.c  client.h  library.json  lwmqtt.code-workspace
.github/workflows/: test.yml
ben_d/: CloudConnect.cpp  CloudConnect.h  MQTTClient.cpp  MQTTClient.h  MQTTClientMbed.cpp  MQTTClientMbed.h  MQTTClientOpenSSL.cpp  MQTTClientOpenSSL.h  MQTTClientTLS.cpp  MQTTClientTLS.h  SSLConnection.cpp  SSLConnection.h  Socket.cpp  Socket.h  TestDevMain.cpp  benMQTTClient.cpp  benMQTTClient.h  config.h  lwmqtt_unix_timer.c  lwmqtt_unix_timer.h  main.cpp  mainAruba.cpp  mainSSL.cpp  mosq.h  net_mosq.c  ssl_init.c  ssl_network.c  ssl_tls.c  sync.cpp  tls_mosq.c  tls_mosq.h
ca/: AmazonRootCA.pem  cert.pem  client.crt  client.crt-2.txt  client.crt.txt  client.key  key.pem  smb_ca_certificate.pem
example/: main.c  unix.c  unix.h
examples/: async.c  sync.c
gentests/: .gitignore  package.yaml  stack.yaml
gentests/app/: Main.hs
include/: lwmqtt.h
include/lwmqtt/: posix.h  unix.h
packet/: connect.c  connect.h  packet.c  packet.h  publish.h  subscribe.h  unsubscribe.c  unsubscribe.h
src/: client.c  client.h  connect.c  connect.h  helpers.c  helpers.h  identified.c  identified.h  packet.c  packet.h  publish.c  publish.h  string.c  string.h  subscribe.c  subscribe.h  unsubscribe.c  unsubscribe.h
src/os/: posix.c  unix.c
test/: main.c  unix.c  unix.h
tests/: client.cpp  connect.cpp  generated.cpp  helpers.cpp  macros.h  packet.cpp  string.cpp  tests.cpp
tests_ben/: client.cpp
tests_d/: client.cpp
